<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/light_new_home" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/id_et_device_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/light_device_id" />

            <Button
                android:id="@+id/id_bt_init"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/light_init" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_switch"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />

                <Switch
                    android:id="@+id/id_sw_switch"
                    android:layout_width="80dp"
                    android:layout_height="48dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_mode_switch"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <Spinner
                    android:id="@+id/id_sp_mode_switch"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scene_light_switch"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <Spinner
                    android:id="@+id/id_sp_scene_light_switch"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_brightness"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <SeekBar
                    android:id="@+id/id_skb_brightness"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/id_tv_brightness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_temperature"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <SeekBar
                    android:id="@+id/id_skb_temperature"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/id_tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_h"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <SeekBar
                    android:id="@+id/id_skb_h"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/id_tv_h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_s"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <SeekBar
                    android:id="@+id/id_skb_s"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/id_tv_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light_v"
                    android:textSize="18dp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="1px" />


                <SeekBar
                    android:id="@+id/id_skb_v"
                    android:layout_width="200dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/id_tv_v"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FF888888" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
